<resources>
    <string name="app_name">Merchant Apps</string>
    <string name="title_activity_main_class">MainClass</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="placeholder_username">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_button_login">LOGIN</string>
    <string name="placeholder_ask">Belum Punya Akun?</string>
    <string name="placeholder_signhere">Daftar Disini</string>
    <string name="placeholder_daftar_merchant">Daftar Merchant</string>
    <string name="placeholder_namausaha">Nama Usaha</string>
    <string name="placeholder_alamat">Alamat</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_deskripsi">Deskripsi</string>
    <string name="placeholder_notelp">No. Telepone</string>
    <string name="placeholder_jamtutup">Jam Tutup</string>
    <string name="plceholder_jambuka">Jam Buka</string>
    <string name="placeholder_button_register">REGISTER</string>
    <string name="placeholder_menu_dashboard">Dashboard</string>
    <string name="placeholder_menu_bantuan">Bantuan</string>
    <string name="placeholder_menu_logout">Logout</string>
    <string name="placeholder_tambah_menu">Tambah Menu</string>
    <string name="placeholder_simpan">Simpan</string>

    <string name="caption_login_success">Login Sukses</string>
    <string name="caption_upload_success">Upload Image Sukses</string>
    <string name="caption_register_success">Register Sukses</string>
    <string name="caption_update_profile_success">Update Profil Sukses</string>
    <string name="caption_update_menu_success">Update Menu Sukses</string>
    <string name="caption_login_failed">Login Gagal</string>
    <string name="caption_upload_failed">Upload Image Gagal</string>
    <string name="caption_update_profile_failed">Uodate Profil Gagal</string>
    <string name="caption_update_menu_failed">Update Menu Gagal</string>
    <string name="caption_register_failed">Register Gagal</string>
    <string name="placeholder_simpan_profile">SIMPAN</string>
    <string name="placeholder_bantuan">Untuk Bantuan atau Masukan\n Kirim Email Ke admin@bangjek.com</string>
    <string name="placeholder_kategori_merchant">Kategori Merchant</string>
    <string name="placeholder_placemerchant">Lokasi Merchant</string>
    <string name="placeholder_pilihlokasi">Pilih Lokasi</string>
</resources>
