<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutNamaUsaha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNamaUsaha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_namausaha"
                android:imeOptions="actionNext"
                android:lines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutAlamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutNamaUsaha"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_alamat"
                android:imeOptions="actionNext"
                android:lines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutAlamat"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_email"
                android:imeOptions="actionNext"
                android:lines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutNoTelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutEmail"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNoTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_notelp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutDeskripsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutNoTelp"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/placeholder_deskripsi"
                android:imeOptions="actionNext"
                android:lines="4" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutDeskripsi">

            <EditText
                android:id="@+id/txtJamBuka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/plceholder_jambuka"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtJamTutup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/placeholder_jamtutup"
                android:inputType="textPersonName" />
        </LinearLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/rounded_button_selector"
            android:text="@string/placeholder_button_register"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutDeskripsi" />

    </android.support.constraint.ConstraintLayout>
    </ScrollView>
