<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:contentDescription="Image Back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="25dp"
            android:text="@string/placeholder_daftar_merchant"
            android:textSize="@dimen/sizeTitle"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.403"
            app:layout_constraintStart_toEndOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="2dp" />

        <include
            android:id="@+id/imageInclude"
            layout="@layout/layout_image"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            android:id="@+id/labelKategori"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_kategori_merchant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageInclude" />
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/txtInputKategori"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelKategori"
            tools:layout_editor_absoluteY="226dp">
        </com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner>
        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:id="@+id/txtInputLayoutNamaUsaha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputKategori"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:singleLine="true"
                android:id="@+id/txtNamaUsaha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_namausaha"
                android:imeOptions="actionNext"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:id="@+id/txtInputLayoutAlamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutNamaUsaha"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:lines="1"
                android:id="@+id/txtAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_alamat" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:id="@+id/txtInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutAlamat"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionNext"
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_email" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:id="@+id/txtInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutEmail"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionNext"
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_password" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:id="@+id/txtInputLayoutNoTelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutPassword"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionNext"
                android:inputType="textPhonetic"
                android:id="@+id/txtNoTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_notelp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/padding_lr_default"
            android:layout_marginRight="@dimen/padding_lr_default"
            android:id="@+id/txtInputLayoutDeskripsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutNoTelp"
            tools:layout_editor_absoluteY="226dp">

            <android.support.design.widget.TextInputEditText
                android:gravity="top"
                android:imeOptions="actionNext"
                android:id="@+id/txtDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_deskripsi" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/txtLabelJam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutDeskripsi">

            <TextView
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/txtLabelJamBuka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/plceholder_jambuka" />

            <TextView
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/txtLabelJamTutup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/placeholder_jamtutup" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelJam">

            <TextView
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/txtJamBuka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="00:00" />

            <TextView
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/txtJamTutup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="00:00" />

        </LinearLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/rounded_button_selector"
            android:text="@string/placeholder_button_register"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_picker" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
